<resources>
    <string name="app_name">LoanCalculator</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    
    <string name="loan_amount">Set Loan Amount</string>
    <string name="interest_amount">Set Interest Amount</string>
    <string name="installments_amount">Set Number of Installments</string>
    <string name="Annuity">Annuity</string>
    <string name="Serial">Serial</string>
    <string name="Settings">Settings</string>
    <string name="Calculate">Calculate</string>
</resources>