<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SerieFragment">

    <TextView
        android:id="@+id/textViewSerie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/annuitetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Annuity"
        app:layout_constraintEnd_toStartOf="@+id/serieButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/serieButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Serial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSerie" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/serieButton"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/serieLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/loan_amount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serieButton" />

    <EditText
        android:id="@+id/serieInterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/interest_amount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serieLoan" />

    <EditText
        android:id="@+id/serieInstallments"
        android:layout_width="227dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/installments_amount"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serieInterest" />

    <TextView
        android:id="@+id/yearList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSerie" />

    <TextView
        android:id="@+id/termList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintStart_toEndOf="@+id/debtList"
        app:layout_constraintTop_toTopOf="@+id/textViewSerie" />

    <TextView
        android:id="@+id/interestList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintStart_toEndOf="@+id/termList"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deductionList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/interestList"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/debtList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/calculateButton"
        app:layout_constraintStart_toEndOf="@+id/yearList"
        app:layout_constraintTop_toTopOf="@+id/textViewSerie" />



</androidx.constraintlayout.widget.ConstraintLayout>